2014-06-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Remove the g_strescape of the
	result text because it will be converted to UTF-8.  And do the UTF-8
	conversion here, because it was moved out of nsend in r18531 (because
	nsend is also used to send internal messages).

2014-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl (main): Add -B to specify running the script in description
	mode first, before running in normal mode if no error was found. When
	unset, use the old behaviour of running only once.

	* doc/openvas-nasl.1: Update documentation.

2014-06-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_set_key): Add back kb debug information when
	global_nasl_debug is set.

2014-06-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c (parse_script_infos): Code style update. Don't try to add
	nvt OID value if it is not present.

2014-06-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c (parse_script_infos): Use script_infos when parsing the
	plugin description instead of creating a new arglist.

2014-06-11  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove or disable remains of OMP rcfile support.

	* omp/omp.c (omp_create_task_rc): Remove.
	(omp_get_tasks, omp_get_tasks_ext): Remove rcfile option from OMP.
	(omp_modify_task_file): Remove rc from variable name for clarity.
	(omp_get_targets): Add missing arg.

	* omp/omp.h: Update headers accordingly.

2014-06-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/kb_redis.c (redis_flush_all): Issue FLUSHALL instead of FLUSHDB.

2014-06-05  Henri Doreau <henri.doreau@gmail.com>

	* misc/kb.h (kb_flush): Operate on currently selected operation set.

	* misc/kb_redis.c (redis_flush_all): Issue FLUSHALL on an initialized kb
	context.

2014-06-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/kb.h (kb_operations): Add kb_flush element.
	(kb_flush): New function.